# ktrayshortcut

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registeredapplication.cpp  registeredapplication.h
